Windows/AbsSynTree/MainDriver/COOL.output
Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class class_list

    4 class: CLASS TYPEID '{' optional_feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';'

    6 optional_feature_list: /* empty */
    7                      | feature_list

    8 feature_list: feature ';'
    9             | feature ';' feature_list

   10 feature: OBJECTID '(' optional_formal_list ')' ':' TYPEID '{' expr '}'
   11        | OBJECTID ':' TYPEID optional_assign_expr

   12 optional_assign_expr: /* empty */
   13                     | ASSIGN expr

   14 optional_formal_list: /* empty */
   15                     | formal_list

   16 formal_list: formal
   17            | formal ',' formal_list

   18 formal: OBJECTID ':' TYPEID

   19 expr: OBJECTID ASSIGN expr
   20     | expr '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   21     | expr '.' OBJECTID '(' optional_expr_list ')'
   22     | OBJECTID '(' optional_expr_list ')'
   23     | IF expr THEN expr ELSE expr FI
   24     | WHILE expr LOOP expr POOL
   25     | '{' expr_seq '}'
   26     | LET let_list
   27     | CASE expr OF case_branches ESAC
   28     | NEW TYPEID
   29     | ISVOID expr
   30     | expr '+' expr
   31     | expr '-' expr
   32     | expr '*' expr
   33     | expr '/' expr
   34     | '~' expr
   35     | expr '<' expr
   36     | expr LE expr
   37     | expr '=' expr
   38     | NOT expr
   39     | '(' expr ')'
   40     | OBJECTID
   41     | INT_CONST
   42     | STR_CONST
   43     | BOOL_CONST

   44 optional_initialization: /* empty */
   45                        | ASSIGN expr

   46 let_list: OBJECTID ':' TYPEID optional_initialization IN expr
   47         | OBJECTID ':' TYPEID optional_initialization ',' let_list

   48 optional_expr_list: /* empty */
   49                   | expr_list

   50 expr_list: expr
   51          | expr ',' expr_list

   52 expr_seq: expr ';'
   53         | expr ';' expr_seq

   54 case_branches: case_branch
   55              | case_branch case_branches

   56 case_branch: OBJECTID ':' TYPEID DARROW expr ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10 20 21 22 39
')' (41) 10 20 21 22 39
'*' (42) 32
'+' (43) 30
',' (44) 17 47 51
'-' (45) 31
'.' (46) 20 21
'/' (47) 33
':' (58) 10 11 18 46 47 56
';' (59) 4 5 8 9 52 53 56
'<' (60) 35
'=' (61) 37
'@' (64) 20
'{' (123) 4 5 10 25
'}' (125) 4 5 10 25
'~' (126) 34
error (256)
STR_CONST (258) 42
TYPEID (259) 4 5 10 11 18 20 28 46 47 56
OBJECTID (260) 10 11 18 19 20 21 22 40 46 47 56
INT_CONST (261) 41
BOOL_CONST (262) 43
CLASS (263) 4 5
ELSE (264) 23
FI (265) 23
IF (266) 23
IN (267) 46
INHERITS (268) 5
LET (269) 26
LOOP (270) 24
POOL (271) 24
THEN (272) 23
WHILE (273) 24
CASE (274) 27
ESAC (275) 27
OF (276) 27
DARROW (277) 56
NEW (278) 28
ISVOID (279) 29
ASSIGN (280) 13 19 45
NOT (281) 38
LE (282) 36
LET_STMT (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5, on right: 2 3
optional_feature_list (49)
    on left: 6 7, on right: 4 5
feature_list (50)
    on left: 8 9, on right: 7 9
feature (51)
    on left: 10 11, on right: 8 9
optional_assign_expr (52)
    on left: 12 13, on right: 11
optional_formal_list (53)
    on left: 14 15, on right: 10
formal_list (54)
    on left: 16 17, on right: 15 17
formal (55)
    on left: 18, on right: 16 17
expr (56)
    on left: 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
    37 38 39 40 41 42 43, on right: 10 13 19 20 21 23 24 27 29 30 31
    32 33 34 35 36 37 38 39 45 46 50 51 52 53 56
optional_initialization (57)
    on left: 44 45, on right: 46 47
let_list (58)
    on left: 46 47, on right: 26 47
optional_expr_list (59)
    on left: 48 49, on right: 20 21 22
expr_list (60)
    on left: 50 51, on right: 49 51
expr_seq (61)
    on left: 52 53, on right: 25 53
case_branches (62)
    on left: 54 55, on right: 27 55
case_branch (63)
    on left: 56, on right: 54 55


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS . TYPEID '{' optional_feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';'

    TYPEID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: class_list .

    $default  reduce using rule 1 (program)


State 4

    2 class_list: class .
    3           | class . class_list

    CLASS  shift, and go to state 1

    $default  reduce using rule 2 (class_list)

    class_list  go to state 7
    class       go to state 4


State 5

    4 class: CLASS TYPEID . '{' optional_feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' optional_feature_list '}' ';'

    INHERITS  shift, and go to state 8
    '{'       shift, and go to state 9


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 class_list: class class_list .

    $default  reduce using rule 3 (class_list)


State 8

    5 class: CLASS TYPEID INHERITS . TYPEID '{' optional_feature_list '}' ';'

    TYPEID  shift, and go to state 10


State 9

    4 class: CLASS TYPEID '{' . optional_feature_list '}' ';'

    OBJECTID  shift, and go to state 11

    $default  reduce using rule 6 (optional_feature_list)

    optional_feature_list  go to state 12
    feature_list           go to state 13
    feature                go to state 14


State 10

    5 class: CLASS TYPEID INHERITS TYPEID . '{' optional_feature_list '}' ';'

    '{'  shift, and go to state 15


State 11

   10 feature: OBJECTID . '(' optional_formal_list ')' ':' TYPEID '{' expr '}'
   11        | OBJECTID . ':' TYPEID optional_assign_expr

    '('  shift, and go to state 16
    ':'  shift, and go to state 17


State 12

    4 class: CLASS TYPEID '{' optional_feature_list . '}' ';'

    '}'  shift, and go to state 18


State 13

    7 optional_feature_list: feature_list .

    $default  reduce using rule 7 (optional_feature_list)


State 14

    8 feature_list: feature . ';'
    9             | feature . ';' feature_list

    ';'  shift, and go to state 19


State 15

    5 class: CLASS TYPEID INHERITS TYPEID '{' . optional_feature_list '}' ';'

    OBJECTID  shift, and go to state 11

    $default  reduce using rule 6 (optional_feature_list)

    optional_feature_list  go to state 20
    feature_list           go to state 13
    feature                go to state 14


State 16

   10 feature: OBJECTID '(' . optional_formal_list ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 21

    $default  reduce using rule 14 (optional_formal_list)

    optional_formal_list  go to state 22
    formal_list           go to state 23
    formal                go to state 24


State 17

   11 feature: OBJECTID ':' . TYPEID optional_assign_expr

    TYPEID  shift, and go to state 25


State 18

    4 class: CLASS TYPEID '{' optional_feature_list '}' . ';'

    ';'  shift, and go to state 26


State 19

    8 feature_list: feature ';' .
    9             | feature ';' . feature_list

    OBJECTID  shift, and go to state 11

    $default  reduce using rule 8 (feature_list)

    feature_list  go to state 27
    feature       go to state 14


State 20

    5 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list . '}' ';'

    '}'  shift, and go to state 28


State 21

   18 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 29


State 22

   10 feature: OBJECTID '(' optional_formal_list . ')' ':' TYPEID '{' expr '}'

    ')'  shift, and go to state 30


State 23

   15 optional_formal_list: formal_list .

    $default  reduce using rule 15 (optional_formal_list)


State 24

   16 formal_list: formal .
   17            | formal . ',' formal_list

    ','  shift, and go to state 31

    $default  reduce using rule 16 (formal_list)


State 25

   11 feature: OBJECTID ':' TYPEID . optional_assign_expr

    ASSIGN  shift, and go to state 32

    $default  reduce using rule 12 (optional_assign_expr)

    optional_assign_expr  go to state 33


State 26

    4 class: CLASS TYPEID '{' optional_feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 27

    9 feature_list: feature ';' feature_list .

    $default  reduce using rule 9 (feature_list)


State 28

    5 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' . ';'

    ';'  shift, and go to state 34


State 29

   18 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 35


State 30

   10 feature: OBJECTID '(' optional_formal_list ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 36


State 31

   17 formal_list: formal ',' . formal_list

    OBJECTID  shift, and go to state 21

    formal_list  go to state 37
    formal       go to state 24


State 32

   13 optional_assign_expr: ASSIGN . expr

    STR_CONST   shift, and go to state 38
    OBJECTID    shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 52


State 33

   11 feature: OBJECTID ':' TYPEID optional_assign_expr .

    $default  reduce using rule 11 (feature)


State 34

    5 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 35

   18 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 18 (formal)


State 36

   10 feature: OBJECTID '(' optional_formal_list ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 53


State 37

   17 formal_list: formal ',' formal_list .

    $default  reduce using rule 17 (formal_list)


State 38

   42 expr: STR_CONST .

    $default  reduce using rule 42 (expr)


State 39

   19 expr: OBJECTID . ASSIGN expr
   22     | OBJECTID . '(' optional_expr_list ')'
   40     | OBJECTID .

    ASSIGN  shift, and go to state 54
    '('     shift, and go to state 55

    $default  reduce using rule 40 (expr)


State 40

   41 expr: INT_CONST .

    $default  reduce using rule 41 (expr)


State 41

   43 expr: BOOL_CONST .

    $default  reduce using rule 43 (expr)


State 42

   23 expr: IF . expr THEN expr ELSE expr FI

    STR_CONST   shift, and go to state 38
    OBJECTID    shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 56


State 43

   26 expr: LET . let_list

    OBJECTID  shift, and go to state 57

    let_list  go to state 58


State 44

   24 expr: WHILE . expr LOOP expr POOL

    STR_CONST   shift, and go to state 38
    OBJECTID    shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 59


State 45

   27 expr: CASE . expr OF case_branches ESAC

    STR_CONST   shift, and go to state 38
    OBJECTID    shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 60


State 46

   28 expr: NEW . TYPEID

    TYPEID  shift, and go to state 61


State 47

   29 expr: ISVOID . expr

    STR_CONST   shift, and go to state 38
    OBJECTID    shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 62


State 48

   38 expr: NOT . expr

    STR_CONST   shift, and go to state 38
    OBJECTID    shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 63


State 49

   34 expr: '~' . expr

    STR_CONST   shift, and go to state 38
    OBJECTID    shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 64


State 50

   25 expr: '{' . expr_seq '}'

    STR_CONST   shift, and go to state 38
    OBJECTID    shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr      go to state 65
    expr_seq  go to state 66


State 51

   39 expr: '(' . expr ')'

    STR_CONST   shift, and go to state 38
    OBJECTID    shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 67


State 52

   13 optional_assign_expr: ASSIGN expr .
   20 expr: expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   21     | expr . '.' OBJECTID '(' optional_expr_list ')'
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr

    LE   shift, and go to state 68
    '<'  shift, and go to state 69
    '='  shift, and go to state 70
    '-'  shift, and go to state 71
    '+'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '@'  shift, and go to state 75
    '.'  shift, and go to state 76

    $default  reduce using rule 13 (optional_assign_expr)


State 53

   10 feature: OBJECTID '(' optional_formal_list ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 77


State 54

   19 expr: OBJECTID ASSIGN . expr

    STR_CONST   shift, and go to state 38
    OBJECTID    shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 78


State 55

   22 expr: OBJECTID '(' . optional_expr_list ')'

    STR_CONST   shift, and go to state 38
    OBJECTID    shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    $default  reduce using rule 48 (optional_expr_list)

    expr                go to state 79
    optional_expr_list  go to state 80
    expr_list           go to state 81


State 56

   20 expr: expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   21     | expr . '.' OBJECTID '(' optional_expr_list ')'
   23     | IF expr . THEN expr ELSE expr FI
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr

    THEN  shift, and go to state 82
    LE    shift, and go to state 68
    '<'   shift, and go to state 69
    '='   shift, and go to state 70
    '-'   shift, and go to state 71
    '+'   shift, and go to state 72
    '*'   shift, and go to state 73
    '/'   shift, and go to state 74
    '@'   shift, and go to state 75
    '.'   shift, and go to state 76


State 57

   46 let_list: OBJECTID . ':' TYPEID optional_initialization IN expr
   47         | OBJECTID . ':' TYPEID optional_initialization ',' let_list

    ':'  shift, and go to state 83


State 58

   26 expr: LET let_list .

    $default  reduce using rule 26 (expr)


State 59

   20 expr: expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   21     | expr . '.' OBJECTID '(' optional_expr_list ')'
   24     | WHILE expr . LOOP expr POOL
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr

    LOOP  shift, and go to state 84
    LE    shift, and go to state 68
    '<'   shift, and go to state 69
    '='   shift, and go to state 70
    '-'   shift, and go to state 71
    '+'   shift, and go to state 72
    '*'   shift, and go to state 73
    '/'   shift, and go to state 74
    '@'   shift, and go to state 75
    '.'   shift, and go to state 76


State 60

   20 expr: expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   21     | expr . '.' OBJECTID '(' optional_expr_list ')'
   27     | CASE expr . OF case_branches ESAC
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr

    OF   shift, and go to state 85
    LE   shift, and go to state 68
    '<'  shift, and go to state 69
    '='  shift, and go to state 70
    '-'  shift, and go to state 71
    '+'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '@'  shift, and go to state 75
    '.'  shift, and go to state 76


State 61

   28 expr: NEW TYPEID .

    $default  reduce using rule 28 (expr)


State 62

   20 expr: expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   21     | expr . '.' OBJECTID '(' optional_expr_list ')'
   29     | ISVOID expr .
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr

    '@'  shift, and go to state 75
    '.'  shift, and go to state 76

    $default  reduce using rule 29 (expr)


State 63

   20 expr: expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   21     | expr . '.' OBJECTID '(' optional_expr_list ')'
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr
   38     | NOT expr .

    LE   shift, and go to state 68
    '<'  shift, and go to state 69
    '='  shift, and go to state 70
    '-'  shift, and go to state 71
    '+'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
